--- a/style.css
+++ b/style.css
@@ -74,6 +74,15 @@ body {
   background-color: #f7f7f7;
 }
 
+.content .carousel img {
+  border: none;
+}
+
+.content .map {
+  margin-top: 30px;
+  text-align: center;
+}
+
 .aside {
   text-align: center;
 }
