--- a/style.scss
+++ b/style.scss
@@ -69,6 +69,15 @@ body {
             background-color: #f7f7f7;
         }
     }
+
+    .carousel img {
+        border: none;
+    }
+
+    .map {
+        margin-top: 30px;
+        text-align: center;
+    }
 }
 
 .aside {
